Upd PersonalRecommendationService